# OpenGLStart

./: CMakeLists.txt  display.cpp  display.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
res/: basicShader.fs  basicShader.vs
